--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav id="header">
-    <img src="images\AmyLogo.png" class="logo" alt="Amy Velazquez" width="100" heigh="53">
+    <img src="images\AmyLogo.png" class="logo" alt="Amy Logo">
     <div id="navigation">
       <p class="navBar">About</p>
       <p class="navBar">Skills</p>
@@ -21,19 +21,19 @@
     <div>
       <img src="images\AmyPhoto.png" class="img" alt="Amy Velazquez">
       <div>
-        <h1 class="h1">Amy Velazquez</h3>
+        <h1 class="h1">Amy Velazquez</h1>
           <p>A UX/UI Designer with a track record of success as a Graphic Designer and front-end Web Designer.I am passionate about combining creativity and usability for web and mobile applications. </p>
         <button class="button">Download Resume</button>
       </div>
+      </div>
     </div>
-   </section>
+  </section>
 
   <footer id="footer">
     <p class="footerNav ">About</p>
     <p class="footerNav ">Skills</p>
     <p class="footerNav ">Work</p>
     <p class="navBar">Contact</p>
-  </div>
   </footer>
 </body>
 </html>
