header and top navigation restructure

--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
   <title>Amy Velazquez</title>
 </head>
 <body>
-  <nav id="header">
+  <header>
     <img src="images\AmyLogo.png" class="logo" alt="Amy Logo">
-    <div id="navigation">
-      <p class="navBar">About</p>
-      <p class="navBar">Skills</p>
-      <p class="navBar">Work</p>
-      <p class="navBar">Contact</p>
-    </div>
-  </nav>
+    <nav>
+      <ul>
+        <li><a href="#" class="active">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <section id="heroGrid">
     <div class="box">
-    <div>
-      <img src="images\AmyPhoto.png" class="img" alt="Amy Velazquez">
       <div>
-        <h1 class="h1">Amy Velazquez</h1>
-          <p>A UX/UI Designer with a track record of success as a Graphic Designer and front-end Web Designer.I am passionate about combining creativity and usability for web and mobile applications. </p>
-        <button class="button">Download Resume</button>
-      </div>
+        <img src="images\AmyPhoto.png" class="img" alt="Amy Velazquez">
+        <div>
+          <h1 class="h1">Amy Velazquez</h1>
+            <p>A UX/UI Designer with a track record of success as a Graphic Designer and front-end Web Designer.I am passionate about combining creativity and usability for web and mobile applications. </p>
+          <button class="button">Download Resume</button>
+        </div>
       </div>
     </div>
   </section>
@@ -33,7 +35,7 @@
     <p class="footerNav ">About</p>
     <p class="footerNav ">Skills</p>
     <p class="footerNav ">Work</p>
-    <p class="navBar">Contact</p>
+    <p class="footerNav">Contact</p>
   </footer>
 </body>
 </html>
