main content structure

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
       </ul>
     </nav>
   </header>
-  <section id="heroGrid">
-    <div class="box">
-      <div>
-        <img src="images\AmyPhoto.png" class="img" alt="Amy Velazquez">
-        <div>
-          <h1 class="h1">Amy Velazquez</h1>
-            <p>A UX/UI Designer with a track record of success as a Graphic Designer and front-end Web Designer.I am passionate about combining creativity and usability for web and mobile applications. </p>
-          <button class="button">Download Resume</button>
-        </div>
+  <section class="main-content">
+    <div class="card">
+      <img src="images\AmyPhoto.png" class="card-image" alt="Amy Velazquez">
+      <div class="card-content">
+        <h1>Amy Velazquez</h1>
+        <p>A UX/UI Designer with a track record of success as a Graphic Designer and front-end Web Designer.I am passionate about combining creativity and usability for web and mobile applications. </p>
+        <button class="primary-btn">Download Resume</button>
       </div>
     </div>
   </section>
