--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="images\AmyLogo.png" class="logo" alt="Amy Logo">
-    <nav>
+    <nav class="top-nav">
       <ul>
         <li><a href="#" class="active">About</a></li>
         <li><a href="#">Skills</a></li>
@@ -30,10 +30,14 @@
   </section>
 
   <footer id="footer">
-    <p class="footerNav ">About</p>
-    <p class="footerNav ">Skills</p>
-    <p class="footerNav ">Work</p>
-    <p class="footerNav">Contact</p>
+    <nav class="footer-nav">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </footer>
 </body>
 </html>
