--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <img src="images\AmyLogo.png" class="logo" alt="Amy Logo">
     <nav class="top-nav">
       <ul>
-        <li><a href="#" class="active">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="" class="active">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="mailto: amyvel6184@gmail.com">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -32,12 +32,13 @@
   <footer id="footer">
     <nav class="footer-nav">
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="" class="active">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="mailto: amyvel6184@gmail.com">Contact</a></li>
       </ul>
     </nav>
   </footer>
 </body>
 </html>
+
