--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
   <section class="main-content">
     <div><h1>My Work</h1></div>
     <div class="workCard">
-      <img src="images/SeaTurtleFinalMobileHand.png" class="card-image" alt="Sea Turtle Conservancy">
+      <img src="images/STC-Mobile-Mockup2.jpg" class="card-image" alt="Sea Turtle Conservancy">
         <div class="card-content"><h1>Sea Turtle Conservancy Nonprofit Website Redesign</h1>
           <p>During the UCF UX/UI Bootcamp, our team had three weeks to redesign a website for a non-profit
             organization with Responsive Web Design (RWD) for Desktop and Mobile. Our team selected the Sea Turtle
