--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
     <nav class="top-nav">
       <ul>
         <li><a href="index.html">About</a></li>
-        <li><a href="skills.html"class="active">Skills</a></li>
+        <li><a href="skills.html" class="active">Skills</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="mailto: amyvel6184@gmail.com">Contact</a></li>
       </ul>
@@ -23,35 +23,43 @@
   </header>
   <section class="main-content">
 
-    <div><h1>My Skills</h1></div>
-    <div class="skillsCard">
-      <img src="images/WebDevelopment.png" class="card-image" alt="Web Development">
-        <div class="card-content"><h1>Web Development</h1>
+    <div>
+      <h1 class="title">My Skills</h1>
+    </div>
+    <div class="flex-containerSkills">
+      <div class="skillsCard">
+        <img src="images/WebDevelopment.png" class="card-image" alt="Web Development">
+        <div class="card-content">
+          <h1>Web Development</h1>
           <p>Experience with
-          front-end web development using HTML5, CSS, Javascript, JQuery, and Bootstrap. Other tools used GitHub, Visual
-          Studio Code, and CodePen. </p>
+            front-end web development using HTML5, CSS, Javascript, JQuery, and Bootstrap. Other tools used GitHub,
+            Visual
+            Studio Code, and CodePen. </p>
+          <div></div>
+        </div>
+      </div>
+      <div></div>
+      <div class="skillsCard">
+        <img src="images/UserInterface.png" class="card-image" alt="User Interface">
+        <div class="card-content">
+          <h1>User Interface Design</h1>
+          <p>Experience
+            developing user interface design and design systems. Utilizing user testing and iterations to enhance user
+            experiences.</p>
+          <div></div>
+        </div>
+      </div>
+      <div></div>
+      <div class="skillsCard">
+        <img src="images/UserResearch.png" class="card-image" alt="User Research">
+        <div class="card-content">
+          <h1>User Research</h1>
+        </div>
+        <p>Experience conducting
+          user-centered research using interviews, surveys, usability tests, card sorting, and analysis.</p>
         <div></div>
       </div>
     </div>
-    <div></div>
-    <div class="skillsCard">
-      <img src="images/UserInterface.png" class="card-image" alt="User Interface">
-      <div class="card-content"><h1>User Interface Design</h1>
-      <p>Experience
-        developing user interface design and design systems. Utilizing user testing and iterations to enhance user
-        experiences.</p>
-      <div></div>
-    </div>
-    </div>
-    <div></div>
-    <div class="skillsCard">
-      <img src="images/UserResearch.png" class="card-image" alt="User Research">
-      <div class="card-content"><h1>User Research</h1></div>
-      <p>Experience conducting
-        user-centered research using interviews, surveys, usability tests, card sorting, and analysis.</p>
-      <div></div>
-    </div>
- 
 
   </section>
 
@@ -59,7 +67,7 @@
     <nav class="footer-nav">
       <ul>
         <li><a href="index.html">About</a></li>
-        <li><a href="skills.html"class="active">Skills</a></li>
+        <li><a href="skills.html" class="active">Skills</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="mailto: amyvel6184@gmail.com">Contact</a></li>
       </ul>
