--- a/work.html
+++ b/work.html
@@ -22,31 +22,37 @@
     </nav>
   </header>
   <section class="main-content">
-    <div><h1>My Work</h1></div>
-    <div class="workCard">
-      <img src="images/STC-Mobile-Mockup2.jpg" class="card-image" alt="Sea Turtle Conservancy">
-        <div class="card-content"><h1>Sea Turtle Conservancy Nonprofit Website Redesign</h1>
+    <div>
+      <h1 class="title">My Work</h1>
+    </div>
+    <div class="flex-containerWork">
+      <div class="workCard">
+        <img src="images/STC-Mobile-Mockup2.jpg" class="card-image" alt="Sea Turtle Conservancy">
+        <div class="card-content">
+          <h2>Sea Turtle Conservancy Nonprofit Website Redesign</h2>
           <p>During the UCF UX/UI Bootcamp, our team had three weeks to redesign a website for a non-profit
             organization with Responsive Web Design (RWD) for Desktop and Mobile. Our team selected the Sea Turtle
-            Conservancy website for our redesign project. View the case study to see the development process from the user
+            Conservancy website for our redesign project. View the case study to see the development process from the
+            user
             research and analysis to the final high-fidelity responsive web design (RWD) prototypes. </p>
-            <button class="primary-btn">View Case Study</button>
-        <div></div>
+          <button class="primary-btn">View Case Study</button>
+        </div>
       </div>
+      <div class="workCard">
+        <img src="images/Mobile.png" class="card-image" alt="Mobile Prototype">
+        <div class="card-content">
+          <h2>Mobile Prototype Project</h2>
+          <p>Lorem ipsum dolor
+            sit amet, consectetur adipiscing elit. Rhoncus interdum lacus hac dolor in arcu, suscipit venenatis.
+            Venenatis, interdum et euismod ipsum sit. Purus neque, elit ornare nunc. Ut mauris libero montes, est
+            faucibus
+            odio ut.</p>
+          <button class="primary-btn">View Case Study</button>
+
+        </div>
+      </div>
+
     </div>
-    <div></div>
-    <div class="workCard">
-      <img src="images/Mobile.png" class="card-image" alt="Mobile Prototype">
-      <div class="card-content"><h1>Mobile Prototype Project</h1>
-      <p>Lorem ipsum dolor
-        sit amet, consectetur adipiscing elit. Rhoncus interdum lacus hac dolor in arcu, suscipit venenatis.
-        Venenatis, interdum et euismod ipsum sit. Purus neque, elit ornare nunc. Ut mauris libero montes, est faucibus
-        odio ut.</p>
-        <button class="primary-btn">View Case Study</button>
-      <div></div>
-    </div>
-    </div>
-    <div></div>
   </section>
 
   <footer id="footer">
